--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <hr />
         <h3>📁 Latest Untested Builds</h3>
         <ul>
-          <li>Play: <a href="files/1_1UT7/WASM/">1.1UT7 (WASM)</a> |
-          <a href="files/1_1UT7/JS/">1.1UT7 (JS)</a></li>
+          <li>Play: <a href="files/1_1UT8/WASM/">1.1UT8 (WASM)</a> |
+          <a href="files/1_1UT8/JS/">1.1UT8 (JS)</a></li>
           <li>Download:
-          <a href="files/1_1UT7/WASM/Tuff_Client_Offline_WASM.html" download="filename">1.1UT7 WASM OFFLINE (Buggy)</a>|
-          <a href="files/1_1UT7/JS/Tuff_Client_JS.html" download="filename">1.1UT7 JS OFFLINE</a>
+          <a href="files/1_1UT8/WASM/Tuff_Client_Offline_WASM.html" download="filename">1.1UT8 WASM OFFLINE</a>|
+          <a href="files/1_1UT8/JS/Tuff_Client_JS.html" download="filename">1.1UT8 JS OFFLINE</a>
 </li>
         </ul>
 
@@ -64,14 +64,17 @@
         <hr />
                 <h3>Archived</h3> Builds</h3>
         <ul>
+          <li><a href="files/1_1UT7/WASM/">1.1UT7 (WASM)</a></li>
             <li><a href="files/1_1UT6/WASM/">1.1UT6 (WASM)</a></li>
           <li><a href="files/1_1UT6/JS/">1.1UT6 (JS)</a></li>
           <li><a href="files/1_1UT5/WASM/">1.1UT5 (WASM)</a></li>
           <li><a href="files/1_1UT5/JS/">1.1UT5 (JS)</a></li>
         </ul>
-        <h3>  Latest Version: 1.1UT7 | Published on: Nov 30, 2025</h3>
-      <p>- Fixed Singeplayer</p>
-      <p>- In-GUI Switch to Offhand</p>
+        <h3>  Latest Version: 1.1UT8 | Published on: Dec 6, 2025</h3>
+      <p>- Major optimizations</p>
+      <p>- Autologin module</p>
+      <p>- NoGlint module</p>
+      <p>- NoRain module</p>
 
       </div>
       <div class="status-bar">Status: Active</div>
