--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       <p>- Autologin module</p>
       <p>- NoGlint module</p>
       <p>- NoRain module</p>
+      <p>- tnt countdown</p>
       <p>- Fixed y0</p>
 
       </div>
