Updated discord link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section class="support">
           <h2>🛠 Support</h2>
           <ul>
-            <li><a href="https://discord.gg/Ek3SqHV4hp">Report Bugs on Discord</a></li>
+            <li><a href="https://discord.com/invite/7UnXG6bE3b">Report Bugs on Discord</a></li>
             <li><a href="https://github.com/TuffNetwork/BrickTesting">Host Your Own</a></li>
           </ul>
         </section>
